// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots css/base/molecules/footer Footer Nav 1`] = `
<div
  style={
    Object {
      "display": "flex",
    }
  }
>
  <body
    data-theme="light"
    style={
      Object {
        "flexGrow": 1,
        "height": "100vh",
        "overflow": "auto",
      }
    }
  >
    <div>
      <footer
        className="footer"
      >
        <nav />
        <small
          className="notice"
        >
          ©
          2020-2021
          <a
            className="account"
            href="https://github.com/facebook/react/"
          >
            @React
          </a>
        </small>
      </footer>
    </div>
  </body>
  <body
    data-theme="dark"
    style={
      Object {
        "flexGrow": 1,
        "height": "100vh",
        "overflow": "auto",
      }
    }
  >
    <div>
      <footer
        className="footer"
      >
        <nav />
        <small
          className="notice"
        >
          ©
          2020-2021
          <a
            className="account"
            href="https://github.com/facebook/react/"
          >
            @React
          </a>
        </small>
      </footer>
    </div>
  </body>
</div>
`;

exports[`Storyshots css/base/molecules/footer Footer Nav 2020 1`] = `
<div
  style={
    Object {
      "display": "flex",
    }
  }
>
  <body
    data-theme="light"
    style={
      Object {
        "flexGrow": 1,
        "height": "100vh",
        "overflow": "auto",
      }
    }
  >
    <div>
      <footer
        className="footer"
      >
        <nav />
        <small
          className="notice"
        >
          ©
          2020
          <a
            className="account"
            href="https://github.com/facebook/react/"
          >
            @React
          </a>
        </small>
      </footer>
    </div>
  </body>
  <body
    data-theme="dark"
    style={
      Object {
        "flexGrow": 1,
        "height": "100vh",
        "overflow": "auto",
      }
    }
  >
    <div>
      <footer
        className="footer"
      >
        <nav />
        <small
          className="notice"
        >
          ©
          2020
          <a
            className="account"
            href="https://github.com/facebook/react/"
          >
            @React
          </a>
        </small>
      </footer>
    </div>
  </body>
</div>
`;
